@@ -4,9 +4,11 @@ Date: ????
   Features:
     - Added migrations for prototype name changes 
   Changes:
+    - Switched over to using Agnel's Zinc Powder
   Bugfixes:
     - Fixed crash when loading old saves
     - Fixed incorrect technology name for Mad Clown's
+    - Fixed ingrendients not being added by bob's add recipe
 ---------------------------------------------------------------------------------------------------
 Version: 0.6.0
 Date: 2026-01-10
